# substrate-client-java

./: .gitignore  .tool-versions  allclasses-frame.html  allclasses-noframe.html  build.gradle  constant-values.html  flake.nix  index-all.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  readme.md  rust-toolchain.toml  serialized-form.html  settings.gradle
.github/workflows/: deploy-javadoc.yml  gradle-build.yml  gradle-publish.yml
api/: build.gradle
com/strategyobject/substrateclient/api/: Api.html  ApiBuilder.html  DefaultApi.html  DefaultModule.html  RequireModule.html  package-frame.html  package-summary.html  package-tree.html
com/strategyobject/substrateclient/common/: CommonType.Array.html  CommonType.html  package-frame.html  package-summary.html  package-tree.html
com/strategyobject/substrateclient/crypto/: CryptoProvider.html  Hasher.html  KeyPair.html  KeyRing.html  NativeException.html  PublicKey.html  SecretKey.html  (+5 more)
common/: build.gradle
crypto/: build.gradle  readme.md
crypto/src/jni-crypto/: .gitignore  Cargo.toml
crypto/src/jni-crypto/src/: lib.rs  sr25519.rs  sr25519_jni.rs
pallet/: build.gradle
pallet/pallet-codegen/: build.gradle
rpc/: build.gradle
rpc/codegen/: build.gradle
rpc/rpc-api/: build.gradle
rpc/rpc-codegen/: build.gradle
rpc/rpc-core/: build.gradle
rpc/rpc-sections/: build.gradle
rpc/rpc-types/: build.gradle
rpc/sections/: build.gradle
scale/: build.gradle
scale/scale-codegen/: build.gradle
storage/: build.gradle
tests/: build.gradle
transport/: build.gradle
(+1861 files in other folders)
